--- a/AppShowMilhao/MainPage.xaml
+++ b/AppShowMilhao/MainPage.xaml
@@ -3,34 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppShowMilhao.MainPage">
 
-    <VerticalStackLayout
-        Padding="30,0"
-        Spacing="25">
-        <Image
-            Source="dotnet_bot.png"
-            HeightRequest="185"
-            Aspect="AspectFit"
-            SemanticProperties.Description="dot net bot in a race car number eight" />
-
-        <Label
-            Text="Hello, World!"
-            Style="{StaticResource Headline}"
-            SemanticProperties.HeadingLevel="Level1" />
-
-        <Label
-            Text="Welcome to &#10;.NET Multi-platform App UI"
-            Style="{StaticResource SubHeadline}"
-            SemanticProperties.HeadingLevel="Level2"
-            SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-        <Button
-            x:Name="CounterBtn"
-            Text="Click me" 
-            SemanticProperties.Hint="Counts the number of times you click"
-            Clicked="OnCounterClicked"
-            HorizontalOptions="Fill" />
-    </VerticalStackLayout>
-    </ScrollView>
+    <StackLayout Spacing="10" Margin="10">
+        <Button Text="Sortear Fácil" Clicked="Button_Clicked" />
+        <Label Text="{Binding Enunciado}" />
+        <StackLayout>
+            <RadioButton x:Name="alt_1" Content="{Binding Path=Alternativa[0].Descricao}"
+                         Value="{Binding Path=Alternativas[0].Correta}" />
+            
+            <RadioButton x:Name="alt_2" Content="{Binding Path=Alternativa[1].Descricao}"
+             Value="{Binding Path=Alternativas[1].Correta}" />
+            
+            <RadioButton x:Name="alt_3" Content="{Binding Path=Alternativa[2].Descricao}"
+             Value="{Binding Path=Alternativas[2].Correta}" />
+            
+            <RadioButton x:Name="alt_4" Content="{Binding Path=Alternativa[3].Descricao}"
+             Value="{Binding Path=Alternativas[3].Correta}" />
+        </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Button Text="Parar" />
+            <Button Text="Próxima" Clicked="Button_Clicked_Proxima" />
+        </StackLayout>
+        
+    </StackLayout>
 
 
 </ContentPage>
